# ibkr-german-tax-declaration-engine-czech

./: ARCHITECTURE_AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  cz-plugin.md  development.md
examples/: README.md
src/: cli.py  main.py  pipeline_runner.py
src/countries/: __init__.py  base.py  registry.py
src/countries/cz/: __init__.py  annual_limit.py  config.py  enums.py  foreign_tax_credit.py  form_mapping.py  fx_policy.py  item_builder.py  loss_offsetting.py  plugin.py  tax_items.py  tax_liability.py  time_test.py
src/countries/cz/exporters/: __init__.py  json_exporter.py  xlsx_exporter.py
src/countries/de/: __init__.py  plugin.py  results.py
src/domain/: results.py
src/engine/: calculation_engine.py  fifo_manager.py
src/engine/event_processors/: option_processor.py
src/utils/: cnb_exchange_rate_provider.py  fx_provider_factory.py
tests/: test_cnb_fx_provider.py  test_country_plugin_interface.py  test_cz_annual_limit_and_netting.py  test_cz_exporters.py  test_cz_foreign_tax_credit.py  test_cz_form_mapping.py  test_cz_ftc_boundaries.py  test_cz_fx_policy.py  test_cz_plugin.py  test_cz_tax_items.py  test_cz_tax_liability.py  test_cz_time_test.py  test_cz_time_test_boundaries.py  test_group6_loss_offsetting.py
